sok/ingress/clm.yml
apiVersion: v1
kind: Service
metadata:
  name: clmnp
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/instance: splunk-cm1-cluster-master
