sok/ingress/shd.yml
apiVersion: v1
kind: Service
metadata:
  name: shd-np
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/instance: splunk-searchhead-standalone-standalone
